# woi-langchain-runtime

./: .gitignore  DESIGN.md  Dockerfile  IMPLEMENTATION_TRACKING.md  MISSING.md  MISSING_FEATURES_TASKS.md  README.md  TODO.md  cli_tool.py  env.example  pyproject.toml  pytest.ini  run_tests.py  template-config.schema.json  uv.toml
.cursor/rules/: alembic-best-practices.mdc  backend-mock.mdc  backend-python.mdc  ddd_architecture.mdc  error-handling-patterns.mdc  feature-implementation-guide.mdc  kiss-principle.mdc  model-code-consistency.mdc  pragmatic-refactoring-patterns.mdc  project-tracking.mdc  web-error-handling-patterns.mdc
.github/chatmodes/: code-review.chatmode.md  criticizer.chatmode.md  plan.chatmode.md
agents/: conversation.py  simple.py
client_sdk/: __init__.py  client.py  models.py
config/: README.md  example.env  services-config.json  show-templates.py  simple-config.json  test-services-config.json
docs/: AGENT_EXECUTION_IMPLEMENTATION.md  AGENT_REQUEST_MODEL_REFACTOR.md  ARCHITECTURE_CLEANUP_COMPLETE.md  ARCHITECTURE_FIX_SUMMARY.md  ASYNC_TASK_ARCHITECTURE.md  BACKWARD_COMPATIBILITY_REMOVED.md  CHATMESSAGE_VALUE_OBJECT_FIX.md  CLEANUP_COMPLETION_SUMMARY.md  CORE_CLEANUP_ACHIEVEMENT.md  DDD_REFACTORING_ACHIEVEMENT.md  DYNAMIC_FRAMEWORK_ARCHITECTURE.md  FINAL_ARCHITECTURE_ACHIEVEMENT.md  FRAMEWORK_CONFIG.md  FRAMEWORK_CONSOLIDATION_ACHIEVEMENT.md  IMPLEMENTATION_SUMMARY.md  LEGACY_CLEANUP_COMPLETE.md  NEW_LAYERED_ARCHITECTURE.md  PLUGIN_SYSTEM.md  REFACTORING_PLAN.md  SERVICE_CONFIG.md  SESSION_AGENT_MANAGEMENT.md  TEMPLATES_AND_TOOLSETS_ARCHITECTURE.md  UOW_FRAMEWORK_INTEGRATION_FIX.md
docs/api/: AGENT_RUNTIME_API.md  AGENT_RUNTIME_API_CN.md  runtime_api.md
examples/: IMPLEMENTATION_CHECKLIST.md  QUICK_REFERENCE.md  README.md  TASK_MANAGEMENT_FLOW.md  simple_agent_cli.py
plugins/: README.md
plugins/agents/: AGENT_DEVELOPMENT_GUIDE.md  __init__.py  example_agent.py.template  test_agent.py
plugins/tools/: __init__.py  example_tool.py.template  file_tools.py  web_tools.py
runtime/: __init__.py  agents.py  api.py  auth.py  config.py  exception.py  generated.py  llm_client.py  main.py  models.py  schema.py  service_config.py  settings.py
runtime/application/: __init__.py
runtime/application/commands/: create_agent_command.py  delete_agent_command.py  execute_agent_command.py  update_agent_command.py  update_agent_status_command.py
runtime/application/queries/: get_agent_query.py
runtime/application/services/: compose_agent_service.py  create_agent_service.py  delete_agent_service.py  execute_agent_service.py  query_agent_service.py  update_agent_service.py  update_agent_status_service.py
runtime/core/: __init__.py  agent_factory.py  agent_orchestrator.py  agent_task_manager.py  discovery.py  exceptions.py  interfaces.py  message_queue.py  queue_message_models.py  scheduler.py  template_manager.py  types.py
runtime/core/executors/: __init__.py  interfaces.py
runtime/core/plugin/: __init__.py  init.py  loader.py  registry.py
runtime/domain/: __init__.py
runtime/domain/entities/: agent.py  agent_task.py  chat_session.py  toolset.py
runtime/domain/events/: domain_events.py
runtime/domain/repositories/: agent_repository.py  session_repository.py  task_repository.py
runtime/domain/services/: agent_validation_service.py  template_validation_service.py
runtime/domain/unit_of_work/: unit_of_work.py
runtime/domain/value_objects/: __init__.py  agent_configuration.py  agent_id.py  chat_message.py  context_id.py  session_id.py  task_id.py  template.py  toolset_configuration.py
runtime/infrastructure/: __init__.py
runtime/infrastructure/adapters/: api_adapters.py
runtime/infrastructure/frameworks/: __init__.py  base.py  executor_base.py
runtime/infrastructure/message_queues/: __init__.py  in_memory.py  rabbitmq.py  redis.py
runtime/infrastructure/repositories/: in_memory_agent_repository.py  in_memory_session_repository.py  in_memory_task_repository.py
runtime/infrastructure/tools/: __init__.py  file_tools.py  web_tools.py
runtime/infrastructure/unit_of_work/: in_memory_uow.py
runtime/infrastructure/web/: auth.py  dependencies.py  main.py
runtime/llm/: langgraph.py  mcp_client.py  service.py
runtime/template_agent/: __init__.py  base.py  conversation.py  manager.py
runtime/templates/: __init__.py  base.py
runtime/toolset/: toolset_service.py
scripts/: start.py
tests/: __init__.py  test_agent_execution.py  test_api.py  test_requests_models.py  test_task_manager.py  test_template_manager_schema.py
tests/api/: test_api.py
tests/integration/: conftest_plugin_e2e.py  test_agent_execution.py  test_compose_agent_integration.py  test_compose_nested_config.py  test_message_queue_integration.py  test_orchestrator.py  test_plugin_agent_comprehensive.py  test_plugin_e2e.py
tests/unit/: test_agent.py  test_agent_configuration.py  test_agent_id.py  test_chat_message.py  test_compose_agent_service.py  test_create_agent_command.py  test_create_agent_service.py  test_execute_agent_command.py  test_execute_agent_service.py  test_in_memory_message_queue.py  test_nested_template_config.py  test_plugin_loader_manifest.py  test_plugin_registry.py  test_requests_models.py
(+37 files in other folders)
