[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "langchain-runtime"
version = "0.1.0"
description = "LangChain/LangGraph-based agent runtime service"
authors = [
    {name = "Darren Zhao", email = "guangyuzhao@hillstonenet.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "openai>=1.3.0",
    "httpx>=0.25.0",
    "python-multipart>=0.0.6",
    "semver>=3.0.0",
    "pydantic-settings>=2.10.1",
    "mcp>=1.10.1",
    "click>=8.1.7",
    "tabulate>=0.9.0",
]

[project.optional-dependencies]
langgraph = [
    "langchain-openai>=0.3.30",
    "langchain>=0.3.27",
    "langgraph>=0.6.5",
    "langchain-mcp-adapters>=0.1.9",
    "langchain-google-genai>=2.1.9",
    "langchain-deepseek>=0.1.4",
]
dev = [
    "ruff>=0.12.9",
    "pytest>=7.4.0",
    "pytest-asyncio>=1.1.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "isort>=6.0.1",
    "fastapi>=0.104.0",
    "fastapi-cli>=0.0.4"
]

[tool.hatch.build.targets.wheel]
packages = ["runtime"]

[tool.ruff]
line-length = 110
lint.select = ["E", "F", "I", "UP", "B012"] # B012 jump-statement-in-finally is for 3.14 compatibility
lint.ignore = ["I001", "UP045"]
lint.fixable = ["E501", "UP006"]
exclude = [".venv", "build", "dist", "migrations"]
target-version = "py311"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "lf"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--strict-markers --strict-config --verbose" 

[tool.pyright]
# Match ruff's lenient type checking
typeCheckingMode = "basic"
# Don't report missing type annotations (like ruff)
reportMissingTypeStubs = false
reportMissingParameterType = false
reportUnknownVariableType = false
reportUnknownArgumentType = false
reportUnknownLambdaType = false
reportUnknownMemberType = false
reportUntypedFunctionDecorator = false
reportUntypedClassDecorator = false
reportUntypedNamedTuple = false
reportPrivateUsage = false
reportUnnecessaryIsInstance = false
reportGeneralTypeIssues = false
# Keep only important type errors
reportInvalidTypeVarUse = true
reportSelfClsParameterName = true
# Ignore venv
exclude = ["**/.venv", "**/venv", "**/env", "**/envs"]

